@@ -15,7 +15,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 @EnableMethodSecurity
@@ -27,39 +27,40 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .csrf(csrf -> csrf.disable())
-                .authorizeHttpRequests(auth -> auth
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .csrf(csrf -> csrf.disable())
+            .authorizeHttpRequests(auth -> auth
 
-                        // Rutas públicas
-                        .requestMatchers("/api/usuarios/login", "/api/usuarios/registrar").permitAll()
+                // Rutas públicas
+                .requestMatchers("/api/usuarios/login", "/api/usuarios/registrar").permitAll()
 
-                        // Rutas solo para ADMIN
-                        .requestMatchers(HttpMethod.POST, "/api/competiciones/crear/**").hasAuthority("admin")
-                        .requestMatchers(HttpMethod.POST, "/api/partidos/crear/**").hasAuthority("admin")
-                        .requestMatchers(HttpMethod.DELETE, "/api/competiciones/eliminar/**").hasAuthority("admin")
-                        .requestMatchers(HttpMethod.PUT, "/api/partidos/editar-fecha/**").hasAuthority("admin")
-                        .requestMatchers(HttpMethod.DELETE, "/api/partidos/eliminar/**").hasAuthority("admin")
-                        .requestMatchers(HttpMethod.PUT, "/api/partidos/resultado/**").hasAuthority("admin")
-                        .requestMatchers("/api/competiciones/participantes/**").hasAuthority("admin")
-                        .requestMatchers("/api/pronosticos/ver-todos/**").hasAuthority("admin")
-                        .requestMatchers(HttpMethod.POST, "/api/equipos/crear").hasAuthority("admin")
+                // Rutas solo para ADMIN
+                .requestMatchers(HttpMethod.POST, "/api/competiciones/crear/**").hasAuthority("admin")
+                .requestMatchers(HttpMethod.POST, "/api/partidos/crear/**").hasAuthority("admin")
+                .requestMatchers(HttpMethod.DELETE, "/api/competiciones/eliminar/**").hasAuthority("admin")
+                .requestMatchers(HttpMethod.PUT, "/api/partidos/editar-fecha/**").hasAuthority("admin")
+                .requestMatchers(HttpMethod.DELETE, "/api/partidos/eliminar/**").hasAuthority("admin")
+                .requestMatchers(HttpMethod.PUT, "/api/partidos/resultado/**").hasAuthority("admin")
+                .requestMatchers("/api/competiciones/participantes/**").hasAuthority("admin")
+                .requestMatchers("/api/pronosticos/ver-todos/**").hasAuthority("admin")
+                .requestMatchers(HttpMethod.POST, "/api/equipos/crear").hasAuthority("admin")
 
-                        // Rutas accesibles para cualquier usuario autenticado (admin o normal)
-                        .requestMatchers("/api/usuarios/listar").authenticated()
-                        .requestMatchers("/api/competiciones/mis-competiciones/**").authenticated()
-                        .requestMatchers(HttpMethod.GET, "/api/competiciones/**").authenticated()
-                        .requestMatchers("/api/partidos/competicion/**").authenticated()
-                        .requestMatchers("/api/apuestas/**").authenticated()
-                        .requestMatchers("/api/clasificacion/**").authenticated()
-                        .requestMatchers("/api/anuncios/**").authenticated()
-                        .requestMatchers("/api/anuncios/competicion/**").authenticated()
-                        .requestMatchers("/api/equipos/listar").authenticated()
+                // Rutas accesibles para cualquier usuario autenticado (admin o normal)
+                .requestMatchers("/api/usuarios/listar").authenticated()
+                .requestMatchers("/api/competiciones/mis-competiciones/**").authenticated()
+                .requestMatchers(HttpMethod.GET, "/api/competiciones/**").authenticated()
+                .requestMatchers("/api/partidos/competicion/**").authenticated()
+                .requestMatchers("/api/apuestas/**").authenticated()
+                .requestMatchers("/api/clasificacion/**").authenticated()
+                .requestMatchers("/api/anuncios/**").authenticated()
+                .requestMatchers("/api/anuncios/competicion/**").authenticated()
+                .requestMatchers("/api/equipos/listar").authenticated()
 
-                        // Todo lo demás necesita autenticación
-                        .anyRequest().authenticated())
-                .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+                // Todo lo demás necesita autenticación
+                .anyRequest().authenticated()
+            )
+            .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
@@ -72,13 +73,16 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of(
-                "http://localhost:5173", // desarrollo local
-                "https://arcanfieldroad.netlify.app", // dominio principal de Netlify
-                "https://681cee21a15a2b109871e038--arcanfieldroad.netlify.app/" // deploy preview de Netlify
+        
+        // ✅ Orígenes explícitos + patrón para subdominios de Netlify
+        config.setAllowedOrigins(Arrays.asList(
+            "http://localhost:5173",
+            "https://arcanfieldroad.netlify.app"
         ));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
+        config.addAllowedOriginPattern("https://*.netlify.app"); // permite todos los previews
+        
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(Arrays.asList("*"));
         config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
